Gp: fix tooltips positions on mobile screens (#721)

--- a/src/assets/less/common-globalping.less
+++ b/src/assets/less/common-globalping.less
@@ -526,6 +526,10 @@
 			}
 		}
 	}
+
+	&_tt-limit {
+		white-space: normal;
+	}
 }
 
 // hide GoogleMaps InfoWindow close btn
